<resources>
    <string name="app_name">RealEstateManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="type_of_property">
        <item> Manor </item>
        <item> Loft </item>
        <item> Penthouse </item>
        <item> Castle </item>
        <item> Villa </item>
        <item> Duplex </item>
        <item> Building </item>
        <item> Apartment </item>
        <item> House </item>
    </string-array>
    <string name="property_type">Type of property</string>
    <string name="property_price">Price</string>
    <string name="min_price"> Min Price </string>
    <string name="max_price"> Max Price </string>
    <string name="property_surface"> Surface </string>
    <string name="min_surface"> Min Surface </string>
    <string name="max_surface"> Max Surface </string>
    <string name="rooms_number"> Number Of Rooms </string>
    <string name="property_address"> Address </string>
    <string name="property_city"> City </string>
    <string name="point_interest"> Point Of Interest </string>
    <string name="school"> School </string>
    <string name="high_school"> High School </string>
    <string name="university"> University </string>
    <string name="mall"> Mall </string>
    <string name="hospital"> Hospital </string>
    <string name="restaurant"> Restaurant </string>
    <string name="park"> Park </string>
    <string name="museum"> Museum </string>
    <string name="stadium"> Stadium </string>
    <string name="night_club"> Night Club </string>
    <string name="sale_date"> On-Sale Date </string>
    <string name="date_sale"> Date Of Sale </string>
    <string name="sale_agent"> Real Estate Agent </string>
    <string name="description"> Property Description </string>
    <string name="available_status"> Available </string>
    <string name="sold_status"> Sold </string>
    <string name="save_button_text"> Save </string>
    <string name="add_photo_button_text"> Add Photos </string>
    <string name="no_image_choose_text"> Please choose a photo </string>
    <string name="search_btn"> Search </string>
    <string name="hint_price"> Price : </string>
    <string name="hint_publish"> Publish the : </string>
    <string name="hint_next"> Next to : </string>
    <string name="hint_by"> Sold by :</string>
    <string name="hint_update"> Update Property </string>
    <string name="hint_update_btn"> update </string>
    <string name="hint_detail"> Property detail </string>
    <string name="notification_text"> New Property is added Successfully </string>
    <string name="toast_price"> Please inter a price </string>
    <string name="toast_room"> Please enter the number of rooms </string>
    <string name="toast_surface"> Please enter surface of property </string>
    <string name="toast_photo"> Please add a photo </string>

    // Simulator
    <string name="Loan_Simulator"> Loan Simulator </string>
    <string name="loan_amount"> Desired Amount </string>
    <string name="hint_period"> Loan Period </string>
    <string name="hint_interest"> Interest Rate </string>
    <string name="hint_monthly"> Monthly Payment </string>
    <string name="hint_interest_total"> Total Interest for Loan </string>
    <string name="hint_total_payment"> Total Payment </string>
    <string name="hint_loan_calculator_btn"> Simulate My Loan </string>
    <string name="error_loan_amount"> Please enter loan amount </string>
    <string name="error_loan_period"> please choose a loan period </string>

    <string name="map"> Map </string>
    <string name="property_ad">Add Property</string>
    <string name="navigation_drawer_open" translatable="false"> Open drawer navigation</string>
    <string name="navigation_drawer_close" translatable="false"> Close drawer navigation</string>

    <string name="popup_title_permission_file_access"> Permission is need </string>



</resources>