<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/container_margin_start_end"
    android:layout_marginRight="@dimen/container_margin_start_end"
    android:layout_marginBottom="@dimen/container_margin_top"
    tools:context=".Controllers.Activities.AddPropertyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/property_photo_rcv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:listitem="@layout/image_list_item" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/container_margin_top"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:startIconDrawable="@drawable/ic_baseline_home_work_24"
            >

            <AutoCompleteTextView
                android:id="@+id/property_type_atc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/property_type"
                android:textStyle="bold"
                android:textColor="#000000"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/property_price_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/property_price"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/property_area_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/property_surface"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rooms_number_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rooms_number"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/property_address_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/property_address"
            android:inputType="textPostalAddress"/>

    </com.google.android.material.textfield.TextInputLayout>


   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/point_interest"
       android:gravity="center_horizontal"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/school_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/school"
                android:onClick="selectItem"/>
            <CheckBox
                android:id="@+id/high_school_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_school"
                android:onClick="selectItem"/>
            <CheckBox
                android:id="@+id/university_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/university"
                android:onClick="selectItem"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/mall_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mall"
                android:onClick="selectItem"/>
            <CheckBox
                android:id="@+id/hospital_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospital"
                android:onClick="selectItem"/>
            <CheckBox
                android:id="@+id/restaurant_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant"
                android:onClick="selectItem"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/park_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/park"
                android:onClick="selectItem"/>
            <CheckBox
                android:id="@+id/museum_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/museum"
                android:onClick="selectItem"/>
            <CheckBox
                android:id="@+id/stadium_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stadium"
                android:onClick="selectItem"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sale_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sale_date"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sold_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_sale"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:chipSpacingHorizontal="30dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/available_chip"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/available_status"
            android:textAlignment="center"
            android:checked="true"
            app:chipStrokeWidth="1dp"
            android:gravity="center_horizontal" />
        <com.google.android.material.chip.Chip
            android:id="@+id/sold_chip"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/sold_status"
            android:textAlignment="center"
            android:checked="true"
            app:chipStrokeWidth="1dp"
            android:layout_gravity="center_horizontal" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/agent_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sale_agent"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginBottom="@dimen/container_margin_top">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/property_description_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:lines="6"
            android:minLines="6"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_add_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        app:icon="@drawable/ic_baseline_add_24"
        app:cornerRadius="20dp" />

</LinearLayout>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_photo_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_baseline_add_a_photo_24"
         app:layout_anchor="@id/property_photo_rcv"
         app:layout_anchorGravity="bottom|right|end"
         android:backgroundTint="@color/icon_tint_color"
         android:tint="@color/drawer_text_color"
         android:layout_margin="15dp"
         style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:clickable="true"/>

 </androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>
